--- a/src/main/Presentation/appsettings.Development.json
+++ b/src/main/Presentation/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.1.28; Database=OnionArchitecture; User Id=sa; Password=Pass@word"
+    "DefaultConnection": "Server=192.168.0.17; Database=OnionArchitecture; User Id=sa; Password=Pass@word"
   },
   "Logging": {
     "LogLevel": {
@@ -10,12 +10,12 @@
     }
   },
   "ElasticApm": {
-    "ServerUrls": "http://192.168.1.28:8200",
+    "ServerUrls": "http://192.168.0.17:8200",
     "ServiceName": "onion-architecture",
     "Environment": "development"
   },
   "Redis": {
-    "ConnectionString": "192.168.1.28:6379"
+    "ConnectionString": "http://192.168.0.17:6379"
   },
   "AllowedHosts": "*"
 }
