--- a/src/main/Presentation/appsettings.Staging.json
+++ b/src/main/Presentation/appsettings.Staging.json
@@ -1,21 +1,29 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168.0.17; Database=OnionArchitecture; User Id=sa; Password=Pass@word"
+    "DefaultConnection": "Server=192.168.1.28;Database=OnionArchitecture;User Id=sa;Password=Pa55w0rd2019;"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
   },
   "ElasticApm": {
-    "ServerUrls": "http://192.168.0.17:8200",
+    "ServerUrls": "http://192.168.1.28:8200",
     "ServiceName": "onion-architecture",
     "Environment": "staging"
   },
+  "Application": {
+    "Name": "Onion"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://192.168.1.28:9200"
+  },
   "Redis": {
-    "ConnectionString": "http://192.168.0.17:6379"
+    "ConnectionString": "http://192.168.1.28:6379"
   },
   "AllowedHosts": "*"
 }
