--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,7 @@ services:
     volumes:
       - mssql:/usr/share/mssql/data
     environment:
-      - SA_PASSWORD=Pass@word
+      - SA_PASSWORD=Pa55w0rd2019
       - ACCEPT_EULA=Y
     ports:
       - "1433:1433"
