--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,4 +43,5 @@ jobs:
         shell: powershell
         run: |
           .\.sonar\scanner\dotnet-sonarscanner begin /k:"fatihyildirim1o_aspnet-starter-kit" /o:"fatihyildirim1o-1" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
+          dotnet build --source  /src/main/Presentation/Presentation.csproj
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
